--- a/ordoFile/ordoFile.csproj
+++ b/ordoFile/ordoFile.csproj
@@ -12,11 +12,26 @@
     <AssemblyName>ordoFile</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
-    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\images\icon.ico</ApplicationIcon>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <Utf8Output>true</Utf8Output>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>3.1.1.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,7 +51,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -155,41 +172,66 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\blocks\frame0.gif" />
-    <Resource Include="Resources\blocks\frame1.gif" />
-    <Resource Include="Resources\blocks\frame10.gif" />
-    <Resource Include="Resources\blocks\frame11.gif" />
-    <Resource Include="Resources\blocks\frame12.gif" />
-    <Resource Include="Resources\blocks\frame13.gif" />
-    <Resource Include="Resources\blocks\frame14.gif" />
-    <Resource Include="Resources\blocks\frame15.gif" />
-    <Resource Include="Resources\blocks\frame16.gif" />
-    <Resource Include="Resources\blocks\frame17.gif" />
-    <Resource Include="Resources\blocks\frame18.gif" />
-    <Resource Include="Resources\blocks\frame19.gif" />
-    <Resource Include="Resources\blocks\frame2.gif" />
-    <Resource Include="Resources\blocks\frame20.gif" />
-    <Resource Include="Resources\blocks\frame21.gif" />
-    <Resource Include="Resources\blocks\frame22.gif" />
-    <Resource Include="Resources\blocks\frame23.gif" />
-    <Resource Include="Resources\blocks\frame3.gif" />
-    <Resource Include="Resources\blocks\frame4.gif" />
-    <Resource Include="Resources\blocks\frame5.gif" />
-    <Resource Include="Resources\blocks\frame7.gif" />
-    <Resource Include="Resources\blocks\frame8.gif" />
-    <Resource Include="Resources\blocks\frame9.gif" />
+    <Resource Include="Resources\images\blocks\frame0.gif" />
+    <Resource Include="Resources\images\blocks\frame1.gif" />
+    <Resource Include="Resources\images\blocks\frame10.gif" />
+    <Resource Include="Resources\images\blocks\frame11.gif" />
+    <Resource Include="Resources\images\blocks\frame12.gif" />
+    <Resource Include="Resources\images\blocks\frame13.gif" />
+    <Resource Include="Resources\images\blocks\frame14.gif" />
+    <Resource Include="Resources\images\blocks\frame15.gif" />
+    <Resource Include="Resources\images\blocks\frame16.gif" />
+    <Resource Include="Resources\images\blocks\frame17.gif" />
+    <Resource Include="Resources\images\blocks\frame18.gif" />
+    <Resource Include="Resources\images\blocks\frame19.gif" />
+    <Resource Include="Resources\images\blocks\frame2.gif" />
+    <Resource Include="Resources\images\blocks\frame20.gif" />
+    <Resource Include="Resources\images\blocks\frame21.gif" />
+    <Resource Include="Resources\images\blocks\frame22.gif" />
+    <Resource Include="Resources\images\blocks\frame23.gif" />
+    <Resource Include="Resources\images\blocks\frame3.gif" />
+    <Resource Include="Resources\images\blocks\frame4.gif" />
+    <Resource Include="Resources\images\blocks\frame5.gif" />
+    <Resource Include="Resources\images\blocks\frame7.gif" />
+    <Resource Include="Resources\images\blocks\frame8.gif" />
+    <Resource Include="Resources\images\blocks\frame9.gif" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\icon.ico" />
+    <Resource Include="Resources\images\icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\blocks\frame6.gif" />
+    <Resource Include="Resources\images\blocks\frame6.gif" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Exit.gif" />
-    <Resource Include="Resources\Exit_MouseOver.gif" />
-    <Resource Include="Resources\Minimise.gif" />
-    <Resource Include="Resources\Minimise_MouseOver.gif" />
+    <Resource Include="Resources\images\Exit.gif" />
+    <Resource Include="Resources\images\Exit_MouseOver.gif" />
+    <Resource Include="Resources\images\Minimise.gif" />
+    <Resource Include="Resources\images\Minimise_MouseOver.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Microsoft.Practices.Unity.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath32)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
